--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "vite",
+    "dev": "vite", 
+    "build": "vite build", 
+    "preview": "vite preview", 
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
